030-software/fluxcd/apps/passbolt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passbolt
  labels:
    app: passbolt
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: passbolt
  template:
    metadata:
      labels:
        app: passbolt
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: passbolt
          image: passbolt/passbolt:5.15.0-1-ce-non-root
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/passbolt
              name: work
            - mountPath: /etc/passbolt/gpg
              name: gpg
      volumes:
        - name: work
          emptyDir:
            medium: Memory
        - name: gpg
          emptyDir:
            medium: Memory
