030-software/fluxcd/apps/passbolt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: passbolt
  labels:
    app: passbolt
spec:
  selector:
    app: passbolt
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
