030-software/fluxcd/apps/passbolt/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: passbolt
spec:
  hostnames:
    - passbolt.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: passbolt
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
